fix: popup video closing icon z-index

--- a/public/scss/models/effects/_popUpVideo.scss
+++ b/public/scss/models/effects/_popUpVideo.scss
@@ -17,6 +17,7 @@
 	font-size: 40px;
 	color:white;
 	cursor: pointer;
+	z-index: 2000;
 }
 
 .popup-video__modal__content {
